[project]
name = "gamedesigndev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cython>=3.0.12",
    "jupyter>=1.1.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "setuptools>=75.8.2",
    "statsmodels>=0.14.4",
    "wheel>=0.45.1",
]
